--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
-    "restify": "^11.1.0"
+    "restify": "^11.1.0",
+    "sha1": "^1.1.1"
   },
   "dependencies": {
     "restify-cors-middleware2": "^2.2.1"
